tests/error/erro02.lua

function foo(a, b, c)
    local d = e + 1 -- Erro
end

foo(1, 2, 'abc')
